# src/api/dto/city.go
@@ -1,0 +1,16 @@
+package dto
+
+type CreateCityRequest struct {
+	Name      string `json:"name" binding:"required,alpha,min=3,max=20"`
+	CountryId int    `json:"countryId" binding:"required"`
+}
+
+type UpdateCityRequest struct {
+	Name      string `json:"name,omitempty" binding:"alpha,min=3,max=20"`
+	CountryId int    `json:"countryId,omitempty"`
+}
+type CityResponse struct {
+	Id      int             `json:"id"`
+	Name    string          `json:"name"`
+	Country CountryResponse `json:"country,omitempty"`
+}
