# src/api/handlers/cities.go
@@ -1,0 +1,99 @@
+package handlers
+
+import (
+	"github.com/gin-gonic/gin"
+
+	_ "github.com/salmantaghooni/golang-car-web-api/src/api/dto"
+	_ "github.com/salmantaghooni/golang-car-web-api/src/api/helper"
+	"github.com/salmantaghooni/golang-car-web-api/src/config"
+	"github.com/salmantaghooni/golang-car-web-api/src/services"
+)
+
+type CityHandler struct {
+	service *services.CityService
+}
+
+func NewCityHandler(cfg *config.Config) *CityHandler {
+	return &CityHandler{
+		service: services.NewCityService(cfg),
+	}
+}
+
+// CreateCity godoc
+// @Summary Create a City
+// @Description Create a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param Request body dto.CreateCityRequest true "Create a City"
+// @Success 201 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/cities/ [post]
+// @Security AuthBearer
+func (h *CityHandler) Create(c *gin.Context) {
+	Create(c, h.service.Create)
+}
+
+// UpdateCity godoc
+// @Summary Update a City
+// @Description Update a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param id path int true "Id"
+// @Param Request body dto.UpdateCityRequest true "Update a City"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Failure 404 {object} helper.BaseHttpResponse "Not found"
+// @Router /v1/cities/{id} [put]
+// @Security AuthBearer
+func (h *CityHandler) Update(c *gin.Context) {
+	Update(c, h.service.Update)
+}
+
+// DeleteCity godoc
+// @Summary Delete a City
+// @Description Delete a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param id path int true "Id"
+// @Success 200 {object} helper.BaseHttpResponse "response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Failure 404 {object} helper.BaseHttpResponse "Not found"
+// @Router /v1/cities/{id} [delete]
+// @Security AuthBearer
+func (h *CityHandler) Delete(c *gin.Context) {
+	Delete(c, h.service.Delete)
+}
+
+// GetCity godoc
+// @Summary Get a City
+// @Description Get a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param id path int true "Id"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Failure 404 {object} helper.BaseHttpResponse "Not found"
+// @Router /v1/cities/{id} [get]
+// @Security AuthBearer
+func (h *CityHandler) GetById(c *gin.Context) {
+	GetById(c, h.service.GetById)
+}
+
+// GetCities godoc
+// @Summary Get Cities
+// @Description Get Cities
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param Request body dto.PaginationInputWithFilter true "Request"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.PagedList[dto.CityResponse]} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/cities/get-by-filter [post]
+// @Security AuthBearer
+func (h *CityHandler) GetByFilter(c *gin.Context) {
+	GetByFilter(c, h.service.GetByFilter)
+}
